<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="?actionBarSize"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_padding_size_medium"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/welcome_image_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/welcome_message"
                android:src="@drawable/welcome" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/help_and_credits" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:text="@string/licenses_area_heading"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_size_small"
                android:layout_marginTop="@dimen/margin_padding_size_small"
                android:padding="@dimen/margin_padding_size_small"
                android:background="@color/grey"
                android:text="@string/license_clan_fab" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_size_small"
                android:layout_marginTop="@dimen/margin_padding_size_small"
                android:padding="@dimen/margin_padding_size_small"
                android:background="@color/grey"
                android:text="@string/license_xing" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_size_small"
                android:layout_marginTop="@dimen/margin_padding_size_small"
                android:padding="@dimen/margin_padding_size_small"
                android:background="@color/grey"
                android:text="@string/license_date_utils" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>